--- a/static/bower.json
+++ b/static/bower.json
@@ -1,25 +1,28 @@
 {
-  "name": "FlaskFrontend",
-  "version": "0.0.0",
-  "homepage": "https://github.com/oyang/testFalsk",
-  "authors": [
-    "Oliver Yang <oyang@sugarcrm.com>"
-  ],
-  "keywords": [
-    "angular",
-    "ui-router",
-    "rest",
-    "api"
-  ],
-  "license": "MIT",
-  "ignore": [
-    "**/.*",
-    "node_modules",
-    "bower_components",
-    "test",
-    "tests"
-  ],
-  "dependencies": {
-    "bootstrap": "~3.3.4"
-  }
+	"name": "Flask Frontend",
+	"version": "0.0.0",
+	"homepage": "https://github.com/oyang/testFalsk",
+	"authors": [
+		"Oliver Yang <oyang@sugarcrm.com>"
+	],
+	"keywords": [
+		"angular",
+		"ui-router",
+		"rest",
+		"api"
+	],
+	"license": "MIT",
+	"ignore": [
+		"**/.*",
+		"node_modules",
+		"bower_components",
+		"test",
+		"tests"
+	],
+	"dependencies": {
+		"bootstrap": "~3.3.4",
+		"angular": "~1.3.15",
+		"angular-ui-router": "~0.2.14",
+		"angular-resource": "~1.3.15"
+	}
 }
